--- a/Gateway/nginx.conf
+++ b/Gateway/nginx.conf
@@ -9,6 +9,16 @@ http {
         listen 80;
         charset utf-8;
 
+            location / {
+            proxy_pass http://product:5002;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+
         location ~ ^/api/user {
             rewrite ^/api/user/(.*) /$1 break;
             proxy_pass http://user:5001;
